--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,7 @@
   ::backdrop,
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
+    font-family: 'Inter', sans-serif;
   }
 
   body {
